tests/ui/kindck/kindck-impl-type-params.stderr
error[E0277]: the trait `Gettable<T>` is not implemented for `S<T>`
  --> $DIR/kindck-impl-type-params.rs:16:13
   |
LL |     let a = &t as &dyn Gettable<T>;
   |             ^^ the trait `Gettable<T>` is not implemented for `S<T>`, which is required by `S<T>: Gettable<T>`
   |
note: required for `S<T>` to implement `Gettable<T>`
  --> $DIR/kindck-impl-type-params.rs:12:32
   |
LL | impl<T: Send + Copy + 'static> Gettable<T> for S<T> {}
   |         ----                   ^^^^^^^^^^^     ^^^^
   |         |
   |         unsatisfied trait bound introduced here
   = note: required for the cast from `&S<T>` to `&dyn Gettable<T>`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn f<T>(val: T) where S<T>: Gettable<T> {
   |                 +++++++++++++++++++++++

error[E0277]: the trait `Gettable<T>` is not implemented for `S<T>`
  --> $DIR/kindck-impl-type-params.rs:16:13
   |
LL |     let a = &t as &dyn Gettable<T>;
   |             ^^ the trait `Gettable<T>` is not implemented for `S<T>`, which is required by `S<T>: Gettable<T>`
   |
note: required for `S<T>` to implement `Gettable<T>`
  --> $DIR/kindck-impl-type-params.rs:12:32
   |
LL | impl<T: Send + Copy + 'static> Gettable<T> for S<T> {}
   |                ----            ^^^^^^^^^^^     ^^^^
   |                |
   |                unsatisfied trait bound introduced here
   = note: required for the cast from `&S<T>` to `&dyn Gettable<T>`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn f<T>(val: T) where S<T>: Gettable<T> {
   |                 +++++++++++++++++++++++

error[E0277]: the trait `Gettable<T>` is not implemented for `S<T>`
  --> $DIR/kindck-impl-type-params.rs:23:31
   |
LL |     let a: &dyn Gettable<T> = &t;
   |                               ^^ the trait `Gettable<T>` is not implemented for `S<T>`, which is required by `S<T>: Gettable<T>`
   |
note: required for `S<T>` to implement `Gettable<T>`
  --> $DIR/kindck-impl-type-params.rs:12:32
   |
LL | impl<T: Send + Copy + 'static> Gettable<T> for S<T> {}
   |         ----                   ^^^^^^^^^^^     ^^^^
   |         |
   |         unsatisfied trait bound introduced here
   = note: required for the cast from `&S<T>` to `&dyn Gettable<T>`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn g<T>(val: T) where S<T>: Gettable<T> {
   |                 +++++++++++++++++++++++

error[E0277]: the trait `Gettable<T>` is not implemented for `S<T>`
  --> $DIR/kindck-impl-type-params.rs:23:31
   |
LL |     let a: &dyn Gettable<T> = &t;
   |                               ^^ the trait `Gettable<T>` is not implemented for `S<T>`, which is required by `S<T>: Gettable<T>`
   |
note: required for `S<T>` to implement `Gettable<T>`
  --> $DIR/kindck-impl-type-params.rs:12:32
   |
LL | impl<T: Send + Copy + 'static> Gettable<T> for S<T> {}
   |                ----            ^^^^^^^^^^^     ^^^^
   |                |
   |                unsatisfied trait bound introduced here
   = note: required for the cast from `&S<T>` to `&dyn Gettable<T>`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn g<T>(val: T) where S<T>: Gettable<T> {
   |                 +++++++++++++++++++++++

error[E0277]: the trait `Gettable<String>` is not implemented for `S<String>`
  --> $DIR/kindck-impl-type-params.rs:36:13
   |
LL |     let a = t as Box<dyn Gettable<String>>;
   |             ^ the trait `Gettable<String>` is not implemented for `S<String>`, which is required by `S<String>: Gettable<String>`
   |
   = help: the trait `Gettable<T>` is implemented for `S<T>`
note: required for `S<String>` to implement `Gettable<String>`
  --> $DIR/kindck-impl-type-params.rs:12:32
   |
LL | impl<T: Send + Copy + 'static> Gettable<T> for S<T> {}
   |                ----            ^^^^^^^^^^^     ^^^^
   |                |
   |                unsatisfied trait bound introduced here
   = note: required for the cast from `Box<S<String>>` to `Box<dyn Gettable<String>>`

error[E0277]: the trait `Gettable<Foo>` is not implemented for `S<Foo>`
  --> $DIR/kindck-impl-type-params.rs:44:37
   |
LL |     let a: Box<dyn Gettable<Foo>> = t;
   |                                     ^ the trait `Gettable<Foo>` is not implemented for `S<Foo>`, which is required by `S<Foo>: Gettable<Foo>`
   |
   = help: the trait `Gettable<T>` is implemented for `S<T>`
note: required for `S<Foo>` to implement `Gettable<Foo>`
  --> $DIR/kindck-impl-type-params.rs:12:32
   |
LL | impl<T: Send + Copy + 'static> Gettable<T> for S<T> {}
   |                ----            ^^^^^^^^^^^     ^^^^
   |                |
   |                unsatisfied trait bound introduced here
   = note: required for the cast from `Box<S<Foo>>` to `Box<dyn Gettable<Foo>>`

error: lifetime may not live long enough
  --> $DIR/kindck-impl-type-params.rs:30:13
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
LL |     let t: S<&'a isize> = S(marker::PhantomData);
LL |     let a = &t as &dyn Gettable<&'a isize>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
